--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -11,7 +11,8 @@ services:
     working_dir: /app
     command: ["npm","start"]
     environment:
-      # point to the backend container by service name
+      # point to the backend container by service name and ensure host binding
+      - HOST=0.0.0.0
       - REACT_APP_API_URL=http://backend:4000
     depends_on:
       - backend
