--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,31 +1,29 @@
 services:
+  nginx:
+    image: nginx:alpine
+    container_name: nginx_reverse_proxy
+    ports:
+      - "80:80"
+    volumes:
+      - ./nginx/default.conf:/etc/nginx/conf.d/default.conf:ro
+    depends_on:
+      - frontend
+      - backend
+
   frontend:
     build: ./my-react-app
     container_name: frontend_c
-    # map host 3000 to container 3000 for react dev server
-    ports:
-      - '3000:3000'
-    volumes:
-      - ./my-react-app:/app:rw
-      - /app/node_modules
-    working_dir: /app
-    command: ["npm","start"]
+    expose:
+      - "80"
     environment:
-      # point to the backend container by service name and ensure host binding
-      - HOST=0.0.0.0
-      - REACT_APP_API_URL=http://backend:4000
-    depends_on:
-      - backend
+      # IMPORTANT: frontend will call same-origin "/api"
+      - REACT_APP_API_URL=/api
+
   backend:
     build: ./backend
     container_name: backend_c
-    ports:
-      - '4000:4000'
-    volumes:
-      - ./backend:/app
-      - /app/node_modules
-    working_dir: /app
-    command: ["npm", "start"]
+    expose:
+      - "4000"
     environment:
       - MONGO_URI=mongodb://mongo:27017/devops
       - JWT_SECRET=your_jwt_secret
@@ -35,9 +33,8 @@ services:
   mongo:
     image: mongo:latest
     container_name: mongo_c
-    ports:
-      - '27017:27017'
     volumes:
       - mongo-data:/data/db
+
 volumes:
   mongo-data:
