--- a/my-react-app/Dockerfile
+++ b/my-react-app/Dockerfile
@@ -1,17 +1,30 @@
-FROM node:18-alpine
+# Build stage
+FROM node:18-alpine AS build
 WORKDIR /app
 
-# Install dependencies first (package.json should be copied separately to use cache)
-COPY package.json package-lock.json* ./
-# Install build tools required by some native npm modules on Alpine
-RUN apk add --no-cache g++ make python3 && \
-	npm install --silent && \
-	apk del make g++
+COPY package*.json ./
+RUN npm ci
 
-# Copy source
 COPY . .
+ARG REACT_APP_API_URL=/api
+ENV REACT_APP_API_URL=$REACT_APP_API_URL
 
-EXPOSE 3000
+RUN npm run build
 
-# Start dev server and bind to 0.0.0.0 so container is reachable from host/network
-CMD ["npm", "start"]
+# Run stage (nginx serves static build)
+FROM nginx:alpine
+COPY --from=build /app/build /usr/share/nginx/html
+
+# optional: SPA routing support
+RUN rm /etc/nginx/conf.d/default.conf
+RUN printf "server {\n\
+  listen 80;\n\
+  root /usr/share/nginx/html;\n\
+  index index.html;\n\
+  location / {\n\
+    try_files \$uri /index.html;\n\
+  }\n\
+}\n" > /etc/nginx/conf.d/default.conf
+
+EXPOSE 80
+CMD ["nginx", "-g", "daemon off;"]
