--- a/my-react-app/Dockerfile
+++ b/my-react-app/Dockerfile
@@ -4,12 +4,7 @@
 FROM node:18-alpine AS build
 WORKDIR /app
 
-RUN npm config set fetch-retries 5 \
-  && npm config set fetch-retry-mintimeout 20000 \
-  && npm config set fetch-retry-maxtimeout 120000 \
-  && npm config set fetch-timeout 600000
-
-COPY package*.json ./
+COPY .npmrc package*.json ./
 RUN --mount=type=cache,target=/root/.npm \
   if [ -f package-lock.json ]; then npm ci --no-audit --no-fund; else npm install --no-audit --no-fund; fi
 
