--- a/docker-compose.prod.yaml
+++ b/docker-compose.prod.yaml
@@ -1,26 +1,17 @@
 services:
-  nginx:
-    image: nginx:alpine
-    container_name: nginx_reverse_proxy
-    ports:
-      - "80:80"
-    volumes:
-      - ./nginx/default.conf:/etc/nginx/conf.d/default.conf:ro
-    depends_on:
-      - frontend
-      - backend
-
   frontend:
     image: ${DOCKERHUB_REPO_FRONTEND:-eg244991/event-planner-frontend}:${IMAGE_TAG:-latest}
     container_name: frontend_c
-    expose:
-      - "80"
+    ports:
+      - "3000:80"
+    environment:
+      - REACT_APP_API_URL=http://localhost:4000
 
   backend:
     image: ${DOCKERHUB_REPO_BACKEND:-eg244991/event-planner-backend}:${IMAGE_TAG:-latest}
     container_name: backend_c
-    expose:
-      - "4000"
+    ports:
+      - "4000:4000"
     environment:
       - MONGO_URI=${MONGO_URI:-mongodb://mongo:27017/devops}
       - JWT_SECRET=${JWT_SECRET:-change-me}
