--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,29 +1,17 @@
 services:
-  nginx:
-    image: nginx:alpine
-    container_name: nginx_reverse_proxy
-    ports:
-      - "80:80"
-    volumes:
-      - ./nginx/default.conf:/etc/nginx/conf.d/default.conf:ro
-    depends_on:
-      - frontend
-      - backend
-
   frontend:
     build: ./my-react-app
     container_name: frontend_c
-    expose:
-      - "80"
+    ports:
+      - "3000:80"
     environment:
-      # IMPORTANT: frontend will call same-origin "/api"
-      - REACT_APP_API_URL=/api
+      - REACT_APP_API_URL=http://localhost:4000
 
   backend:
     build: ./backend
     container_name: backend_c
-    expose:
-      - "4000"
+    ports:
+      - "4000:4000"
     environment:
       - MONGO_URI=mongodb://mongo:27017/devops
       - JWT_SECRET=your_jwt_secret
